syntax = "proto3";

package product;
option go_package = "./pb";

import "google/protobuf/timestamp.proto";

// ProductService - service fro loaging products from external resources
service ProductService {
  // Unary
  rpc LoadProducts(LoadProductsRequest) returns (LoadProductsResponse) {}
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
  // Bi-directional steaming
  rpc GetProductsInfinite(stream GetProductsRequest) returns (stream GetProductsResponse) {}
}

// LoadProductsRequest
message LoadProductsRequest {
  string url = 1;
}
// LoadProductsResponse
message LoadProductsResponse {
  int64 code = 1;
  string message = 2;
}

// GetProductsRequest
message GetProductsRequest {
  int64 limit = 1;
  int64 skip = 2;
  SortOrder priceOrder = 3;
}
// SortOrder
enum SortOrder {
  ASC = 0;
  DESC = 1;
}
// GetProductsResponse
message GetProductsResponse {
  repeated Product product = 1;
}
// Product
message Product {
  string name = 1;
  int64 price = 2;
  int64 price_change_count = 3;
  google.protobuf.Timestamp updated_at = 4;
}

